hide scene selector in demo

--- a/web/index.html
+++ b/web/index.html
@@ -391,7 +391,7 @@
 						</div>
 					</div>
 				</div>
-				<div id="sceneSelector" class="controls panel dm hooked no-edit panning-only">
+				<div id="sceneSelector" class="controls panel dm hooked no-edit no-demo panning-only">
 					<h3>Scene Selector</h3>
 					<span class="top-hook">
 						<div>
