edited demo entry on home page

--- a/web/index.html
+++ b/web/index.html
@@ -74,7 +74,7 @@
 							</label>
 							<p id="loginError" class="bad"></p>
 						</span>
-						<button id="login" class="big">Log in</button>
+						<button id="login" class="big">Log In</button>
 					</form>
 					<span>
 						or
@@ -82,15 +82,13 @@
 					</span>
 				</div>
 				<div class="no-mobile">
-					<h1>Try the Demo</h1>
+					<h1>Give It a Go</h1>
 
-					<p>
-						Launch a private session and check out all the features right now!
-					</p>
+					<p>Launch a private session and check out all features right now!</p>
 
 					<div id="enterDemo" class="glow">
 						<i class="fas fa-wand-magic-sparkles"></i>
-						<button class="big">Enter Sandbox</button>
+						<button class="big">Enter Session</button>
 					</div>
 				</div>
 			</div>
