added discord invite to footer

--- a/web/index.html
+++ b/web/index.html
@@ -207,10 +207,10 @@
 					</a>
 				</div>
 				<div style="justify-content: flex-end">
-					<a href="https://github.com/doodlezucc" class="icon with-tooltip" target="_blank"
+					<a href="https://discord.gg/tKZPX2cNYs" class="icon with-tooltip" target="_blank"
 						rel="noopener noreferrer">
-						<i class="fab fa-github"></i>
-						<span>More Code on Github</span>
+						<i class="fab fa-discord"></i>
+						<span>Join the Discord</span>
 					</a>
 					<a href="https://www.paypal.com/paypalme/theowiese" class="icon with-tooltip" target="_blank"
 						rel="noopener noreferrer">
@@ -226,6 +226,11 @@
 						rel="noopener noreferrer">
 						<i class="fas fa-envelope"></i>
 						<span>Write a Mail</span>
+					</a>
+					<a href="https://github.com/doodlezucc" class="icon with-tooltip" target="_blank"
+						rel="noopener noreferrer">
+						<i class="fab fa-github"></i>
+						<span>More Code on Github</span>
 					</a>
 				</div>
 			</footer>
