added no-reply disclaimer to feedback panel

--- a/web/index.html
+++ b/web/index.html
@@ -692,10 +692,12 @@
 
 			<textarea maxlength="2000" placeholder="Message content..."></textarea>
 
-			<label>
-				<input type="checkbox" id="allowAcc">
-				Allow viewing/modifying your account
-			</label>
+			<p>
+				Although your feedback will be forwarded, you're not going to be able to receive a reply via email.
+				Consider joining the
+				<a href="https://discord.gg/tKZPX2cNYs" target="_blank" rel="noopener noreferrer">Community Discord</a>
+				if you need interactive help.
+			</p>
 
 			<div>
 				<p id="joinError"></p>
