display distance when moving tokens

--- a/web/index.html
+++ b/web/index.html
@@ -435,7 +435,8 @@
 						<div class="corner top left" style="cursor: nw-resize;"></div>
 					</div>
 					<div id="grid">
-						<svg id="distanceCanvas" class="fill-board"></svg>
+						<svg id="distanceCanvas" class="fill-board grid-canvas"></svg>
+						<svg id="measureCanvas" class="fill-board grid-canvas"></svg>
 						<div id="movableGhost" class="movable">
 							<div class="img"></div>
 						</div>
