introduced public changelog

--- a/web/index.html
+++ b/web/index.html
@@ -36,6 +36,17 @@
 
 		<span class="no-mobile">
 			<button id="logOut" class="hidden">Log Out</button>
+			<button id="changelogButton">
+				Changelog
+				<div class="content">
+					<ul id="changelog"></ul>
+					<a href="https://github.com/doodlezucc/dungeonclub/commits/master" class="icon with-tooltip"
+						target="_blank" rel="noopener noreferrer">
+						<i class="fas fa-arrow-up-right-from-square"></i>
+						<span>View All Changes</span>
+					</a>
+				</div>
+			</button>
 			<button id="feedback">Feedback</button>
 			<button id="save" style="display: none;">Save Server Data</button>
 		</span>
