introduced "snap to grid" button

--- a/web/index.html
+++ b/web/index.html
@@ -405,6 +405,10 @@
 								<i class="fas fa-eye"></i>
 								<span>Visible</span>
 							</button>
+							<button id="movableSnap" class="icon with-tooltip">
+								<i class="fas fa-arrows-to-dot"></i>
+								<span>Snap to Grid</span>
+							</button>
 							<button id="movableRemove" class="icon with-tooltip">
 								<i class="fas fa-trash"></i>
 								<span>Remove From Scene</span>
