indicate if the chat message is a valid dice roll

--- a/web/index.html
+++ b/web/index.html
@@ -661,10 +661,16 @@
 				<div id="messages"></div>
 				<div id="chat">
 					<textarea cols="30" rows="10" maxlength="3000" placeholder="Chat with other players..."></textarea>
-					<button class="icon close with-tooltip" disabled>
-						<i class="fas fa-paper-plane"></i>
-						<span>Send</span>
-					</button>
+					<div>
+						<button id="chatRoll" class="icon close with-tooltip" disabled>
+							<i class="fas fa-dice"></i>
+							<span></span>
+						</button>
+						<button id="chatSend" class="icon close with-tooltip" disabled>
+							<i class="fas fa-paper-plane"></i>
+							<span>Send</span>
+						</button>
+					</div>
 				</div>
 			</div>
 		</section>
