hide music playlists if enableMusic is false

--- a/web/index.html
+++ b/web/index.html
@@ -600,8 +600,8 @@
 								<i class="fas fa-forward"></i>
 							</button>
 						</div>
-						<div id="audioSettings">
-							<span>
+						<div>
+							<span id="playerMusicSlider">
 								<i class="fas fa-music"></i>
 								<input id="vMusic" type="range" min="0" max="1" value="0.8" step="0.005">
 							</span>
