exclude privacy policy in builds

--- a/web/index.html
+++ b/web/index.html
@@ -205,14 +205,14 @@
 			</div>
 
 			<footer>
-				<div style="justify-content: start; gap: 4px">
+				<div id="hostInfo" style="justify-content: start; gap: 4px">
 					Hosted at <a href="https://theoretically.online">Theoretically Online</a>
 				</div>
 				<div style="justify-content: center; width: 100%">
 					<a href="https://github.com/doodlezucc/dungeonclub" target="_blank" rel="noopener noreferrer">
 						Source Code
 					</a>
-					<a href="privacy">Privacy Policy</a>
+					<a id="privacy" href="privacy">Privacy Policy</a>
 					<a href="https://ko-fi.com/doodlezucc" target="_blank" rel="noopener noreferrer">
 						Buy Me a Coffee
 					</a>
