replace feedback with discord link if self-hosted

--- a/web/index.html
+++ b/web/index.html
@@ -717,7 +717,8 @@
 			<p>
 				Although your feedback will be forwarded, you're not going to be able to receive a reply via email.
 				Consider joining the
-				<a href="https://discord.gg/tKZPX2cNYs" target="_blank" rel="noopener noreferrer">Community Discord</a>
+				<a id="discordLink" href="https://discord.gg/tKZPX2cNYs" target="_blank"
+					rel="noopener noreferrer">Community Discord</a>
 				if you need interactive help.
 			</p>
 
