--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
 	<meta property="og:title" content="Dungeon Club" />
 	<meta property="twitter:title" content="Dungeon Club" />
