styled map tab on mobile (viewing only for now)

--- a/web/index.html
+++ b/web/index.html
@@ -527,7 +527,7 @@
 							<i class="fas fa-image"></i>
 						</button>
 					</div>
-					<span class="on-edit">
+					<span class="on-edit no-mobile">
 						<button class="icon navigate no-bg">
 							<i class="fas fa-chevron-left"></i>
 						</button>
@@ -542,7 +542,7 @@
 						</button>
 					</span>
 					<div id="maps" class="on-edit"></div>
-					<div id="mapTools" class="on-edit">
+					<div id="mapTools" class="on-edit no-mobile">
 						<div>
 							<button class="icon" mode="draw">
 								<i class="fas fa-pen"></i>
@@ -598,11 +598,11 @@
 							<span>Allow Players to Draw</span>
 						</button>
 					</div>
-					<button class="icon no-bg" type="reset">
+					<button class="icon" type="reset">
 						Exit Map View
 						<i class="fas fa-arrow-left"></i>
 					</button>
-					<button class="icon dm with-tooltip on-edit no-bg" id="mapDelete">
+					<button class="icon dm with-tooltip on-edit no-mobile" id="mapDelete">
 						<i class="fas fa-trash"></i>
 						<span>Remove This Map</span>
 					</button>
