optimized game chat on mobile

--- a/web/index.html
+++ b/web/index.html
@@ -608,8 +608,11 @@
 					</button>
 				</div>
 				<div id="online"></div>
+				<button id="chatOpen" class="controls floating-action icon on-mobile">
+					<i class="fas fa-message"></i>
+				</button>
 			</div>
-			<div id="log">
+			<div id="log" class="hidden">
 				<div id="ambience" class="no-mobile">
 					<button class="icon">
 						Audioplayer
