display mini chat messages on mobile

--- a/web/index.html
+++ b/web/index.html
@@ -610,6 +610,7 @@
 				<div id="online"></div>
 				<button id="chatOpen" class="controls floating-action icon on-mobile">
 					<i class="fas fa-message"></i>
+					<div id="miniChat"></div>
 				</button>
 			</div>
 			<div id="log" class="hidden">
