use homepage url for title href

--- a/web/index.html
+++ b/web/index.html
@@ -29,7 +29,7 @@
 
 <body>
 	<header class="no-mobile">
-		<a href="/" class="title">
+		<a class="title">
 			<div><img src="images/icon.png"></div>
 			<h1>Dungeon Club</h1>
 		</a>
@@ -55,7 +55,7 @@
 	<div id="content">
 		<section id="home">
 			<header class="on-mobile">
-				<a href="/" class="title">
+				<a class="title">
 					<div><img src="images/icon.png"></div>
 					<h1>Dungeon Club</h1>
 				</a>
