moved website to dungeonclub.net

--- a/web/index.html
+++ b/web/index.html
@@ -10,14 +10,14 @@
 	<meta property="twitter:title" content="Dungeon Club" />
 
 	<meta property="og:type" content="website" />
-	<meta property="og:image" content="https://theoretically.online/dnd/images/banner.jpg" />
-	<meta property="twitter:image" content="https://theoretically.online/dnd/images/banner.jpg" />
+	<meta property="og:image" content="https://dungeonclub.net/images/banner.jpg" />
+	<meta property="twitter:image" content="https://dungeonclub.net/images/banner.jpg" />
 
 	<meta property="og:description" content="Lead campaigns with players all over the world, whenever you want!" />
 	<meta property="description" content="Lead campaigns with players all over the world, whenever you want!" />
 	<meta property="twitter:card" content="summary_large_image" />
-	<meta property="twitter:domain" content="theoretically.online" />
-	<meta property="twitter:url" content="https://theoretically.online/dnd" />
+	<meta property="twitter:domain" content="dungeonclub.net" />
+	<meta property="twitter:url" content="https://dungeonclub.net" />
 
 	<link rel="stylesheet" href="style/style.css">
 	<link rel="shortcut icon" type="image/png" sizes="128x128" href="images/icon.png">
@@ -230,7 +230,7 @@
 
 			<footer>
 				<div id="hostInfo" style="justify-content: start; gap: 4px">
-					Hosted at <a href="https://theoretically.online">Theoretically Online</a>
+					Created by <a href="https://theoretically.online">doodlezucc</a>
 				</div>
 				<div style="justify-content: center; width: 100%">
 					<a href="https://github.com/doodlezucc/dungeonclub" target="_blank" rel="noopener noreferrer">
