--- a/web/privacy.html
+++ b/web/privacy.html
@@ -14,7 +14,7 @@
 
 <body class="dark-mode document">
 	<header>
-		<a href="/dnd" class="title">
+		<a href="/" class="title">
 			<div><img src="images/icon.png"></div>
 			<h1>Dungeon Club</h1>
 		</a>
@@ -25,7 +25,7 @@
 		<p>
 			Dungeon Club takes data protection seriously and respects your privacy. In this privacy policy, we
 			provide information about what data we collect as part of our Internet offer at
-			<a href="https://theoretically.online/dnd">theoretically.online/dnd</a>
+			<a href="https://dungeonclub.net">dungeonclub.net</a>
 			and how we process this data. With regard to the terminology used, e.g. "personal data" or its "processing",
 			we refer to the definitions in Article 4 of the General Data Protection Regulation (GDPR).
 		</p>
