--- a/web/index.html
+++ b/web/index.html
@@ -690,10 +690,16 @@
 				<div id="chat">
 					<textarea cols="30" rows="10" maxlength="3000" placeholder="Chat with other players..."></textarea>
 					<div>
-						<button id="chatRoll" class="icon close with-tooltip" disabled>
-							<i class="fas fa-dice"></i>
-							<span></span>
-						</button>
+						<div id="chatRoll">
+							<button id="chatRollPrivate" class="icon close with-tooltip dm">
+								<i class="fas fa-eye-slash"></i>
+								<span></span>
+							</button>
+							<button id="chatRollPublic" class="icon close with-tooltip">
+								<i class="fas fa-dice"></i>
+								<span></span>
+							</button>
+						</div>
 						<button id="chatSend" class="icon close with-tooltip" disabled>
 							<i class="fas fa-paper-plane"></i>
 							<span>Send</span>
