--- a/web/index.html
+++ b/web/index.html
@@ -291,7 +291,7 @@
 						Roll Dice
 						<i class="fas fa-dice-d20"></i>
 						<div class="content">
-							<span class="with-tooltip icon dm">
+							<span class="with-tooltip icon dm roll-visibility">
 								Visibility<i></i><span></span>
 							</span>
 							<table id="dice"></table>
@@ -690,12 +690,11 @@
 				<div id="chat">
 					<textarea cols="30" rows="10" maxlength="3000" placeholder="Chat with other players..."></textarea>
 					<div>
-						<div id="chatRoll">
-							<button id="chatRollPrivate" class="icon close with-tooltip dm">
-								<i class="fas fa-eye-slash"></i>
-								<span></span>
+						<div id="chatRoller">
+							<button class="icon close with-tooltip dm roll-visibility">
+								<i></i><span></span>
 							</button>
-							<button id="chatRollPublic" class="icon close with-tooltip">
+							<button id="chatRoll" class="icon close with-tooltip">
 								<i class="fas fa-dice"></i>
 								<span></span>
 							</button>
