edited html meta tags

--- a/web/index.html
+++ b/web/index.html
@@ -6,23 +6,30 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
-	<meta property="og:title" content="Dungeon Club" />
-	<meta property="twitter:title" content="Dungeon Club" />
+	<title>Dungeon Club: Your Independent Tabletop</title>
+	<meta name="title" content="Dungeon Club: Your Independent Tabletop">
+	<meta property="og:title" content="Dungeon Club: Your Independent Tabletop">
+	<meta property="twitter:title" content="Dungeon Club: Your Independent Tabletop">
 
-	<meta property="og:type" content="website" />
-	<meta property="og:image" content="https://dungeonclub.net/images/banner.jpg" />
-	<meta property="twitter:image" content="https://dungeonclub.net/images/banner.jpg" />
+	<meta name="description" content="A free online platform to lead and play pen-and-paper adventures.">
+	<meta property="og:description" content="A free online platform to lead and play pen-and-paper adventures.">
+	<meta property="twitter:description" content="A free online platform to lead and play pen-and-paper adventures.">
 
-	<meta property="og:description" content="Lead campaigns with players all over the world, whenever you want!" />
-	<meta property="description" content="Lead campaigns with players all over the world, whenever you want!" />
-	<meta property="twitter:card" content="summary_large_image" />
-	<meta property="twitter:domain" content="dungeonclub.net" />
-	<meta property="twitter:url" content="https://dungeonclub.net" />
+	<meta property="og:url" content="https://dungeonclub.net">
+	<meta property="twitter:url" content="https://dungeonclub.net">
+
+	<meta property="og:image" content="https://dungeonclub.net/images/banner.jpg">
+	<meta property="twitter:image" content="https://dungeonclub.net/images/banner.jpg">
+
+	<meta property="og:type" content="website">
+	<meta property="twitter:card" content="summary_large_image">
+
+	<meta name="color-scheme" content="dark">
+	<meta name="theme-color" content="#2e2926">
 
 	<link rel="stylesheet" href="style/style.css">
 	<link rel="shortcut icon" type="image/png" sizes="128x128" href="images/icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="images/icon32.png">
-	<title>Dungeon Club</title>
 	<script defer src="main.dart.js"></script>
 	<script src="https://kit.fontawesome.com/a3de05bb60.js" crossorigin="anonymous"></script>
 </head>
