introduced fog of war fill/clear button

--- a/web/index.html
+++ b/web/index.html
@@ -307,18 +307,21 @@
 					<button class="icon elevate tab toggle dm no-hover" id="fogOfWar">
 						Fog of War
 						<i class="fas fa-cloud"></i>
-						<div class="content">
+						<div class="content tab-horiz">
 							<div class="toolbox">
 								<i class="fas fa-glasses" id="fowPreview">
 									<span>X-Ray</span>
 								</i>
+							</div>
+							<div class="toolbox" id="fowTools">
+								<i class="fas fa-chess-board" id="fowFill"><span></span></i>
 							</div>
 						</div>
 					</button>
 					<button class="icon elevate tab toggle" id="measureDistance">
 						Measuring
 						<i class="fas fa-ruler"></i>
-						<div class="content">
+						<div class="content tab-horiz">
 							<div class="toolbox" id="measureTools">
 								<i class="fas fa-ruler-combined" mode="0">
 									<span>Path</span>
