update fow fill/clear button in initialization

--- a/web/index.html
+++ b/web/index.html
@@ -314,7 +314,7 @@
 								</i>
 							</div>
 							<div class="toolbox" id="fowTools">
-								<i class="fas fa-chess-board" id="fowFill"><span></span></i>
+								<i id="fowFill"><span></span></i>
 							</div>
 						</div>
 					</button>
