--- a/web/index.html
+++ b/web/index.html
@@ -507,18 +507,24 @@
 										additive="sum" />
 								</pattern>
 
-								<g id="polyneg"></g>
+								<g id="polyprevpos" class="polypattern"></g>
+								<g id="polyprevneg"></g>
+								<g id="polyneg" polycopy="n"></g>
 
-								<mask id="polynegmask" fill="black">
+								<mask id="polynegmask" fill="black" polycopy="n" polydeep>
 									<rect fill="white"></rect>
-									<use href="#polyneg"></use>
+									<use href="#polyneg" polyattr="href"></use>
+									<use href="#polyprevneg"></use>
 								</mask>
 							</defs>
 
-							<g id="polypos" class="polypattern" mask="url(#polynegmask)"></g>
+							<g id="polypos" class="polypattern" mask="url(#polynegmask)" polycopy="p" polyattr="mask">
+							</g>
 
 							<g id="polynegdisplay">
-								<use href="#polyneg"></use>
+								<use href="#polyneg" polycopy="n" polyattr="href"></use>
+								<use href="#polyprevpos"></use>
+								<use href="#polyprevneg"></use>
 							</g>
 
 							<polygon id="polyprev"></polygon>
