implemented buttons for new polymask tools

--- a/web/index.html
+++ b/web/index.html
@@ -309,11 +309,17 @@
 						<i class="fas fa-cloud"></i>
 						<div class="content tab-horiz">
 							<div class="toolbox">
-								<i class="fas fa-glasses" id="fowPreview">
-									<span>X-Ray</span>
+								<i class="fas fa-paintbrush" id="fowStroke" tool="stroke">
+									<span>Brush</span>
+								</i>
+								<i class="fas fa-draw-polygon" id="fowLasso" tool="lasso">
+									<span>Outline</span>
 								</i>
 							</div>
 							<div class="toolbox" id="fowTools">
+								<i class="fas fa-glasses" id="fowPreview">
+									<span>X-Ray</span>
+								</i>
 								<i id="fowFill"><span></span></i>
 							</div>
 						</div>
