ask confirmation when clearing complex fog

--- a/web/index.html
+++ b/web/index.html
@@ -323,6 +323,8 @@
 								<i class="fas fa-border-all" id="fowGrid">
 									<span>Use Grid</span>
 								</i>
+							</div>
+							<div class="toolbox">
 								<i id="fowFill"><span></span></i>
 							</div>
 						</div>
