updated fog of war on homepage

--- a/web/index.html
+++ b/web/index.html
@@ -201,11 +201,15 @@
 					<div class="info">
 						<h2>Fog of War</h2>
 						<p>When planning out a large dungeon, you may not want your players to know what evil creatures
-							lie ahead of them. By using the Fog of War tool, you can effectively
-							<b>hide areas of a scene</b>.
+							lie ahead - use the Fog of War tool to <b>hide entire areas of a scene</b>.
 						</p>
-						<p>Drawn areas are automatically united and merged into bigger ones, which also allows
-							you to easily <b>carve holes</b>.</p>
+						<p>As a game master, you can draw and edit an <b>opaque layer of fog</b> above your scene.
+							By either snapping to the grid or drawing freely, you can quickly add to and erase any area
+							from this <b>dedicated canvas</b>.
+						</p>
+						<p>An underlying sophisticated algorithm <b>merges new shapes</b> into the layer as you go,
+							keeping the painted state of polygons tidy and small in data.
+						</p>
 						<p>The battle map shown here was randomly generated using
 							<a href="https://dungen.app/dungen/" target="_blank" rel="noopener noreferrer">DunGen</a>.
 						</p>
