introduced nicknames and duplicate label handling

--- a/web/index.html
+++ b/web/index.html
@@ -434,8 +434,9 @@
 						</div>
 					</div>
 					<div id="selectionProperties" class="controls panel hidden">
-						<span class="on-empty">Name:
-							<input id="movableLabel" type="text" placeholder="Label...">
+						<span id="movableLabel">
+							Name:<b></b>
+							<input type="text" placeholder="Label...">
 						</span>
 						<span>Size:
 							<input id="movableSize" type="number" min="0" max="25" placeholder="Size...">
