draw entire board grid regardless of padding

--- a/web/index.html
+++ b/web/index.html
@@ -536,7 +536,7 @@
 								</g>
 							</pattern>
 						</defs>
-						<rect id="gridCanvasMask" fill="url(#gridPattern)"></rect>
+						<rect id="gridCanvasMask" fill="url(#gridPattern)" width="100%" height="100%" />
 					</svg>
 					<div id="gridPadding" class="crop-container">
 						<div class="width top" style="cursor: n-resize;"></div>
@@ -561,7 +561,7 @@
 							<defs>
 								<pattern id="barrier" width="61" height="30" patternUnits="userSpaceOnUse"
 									patternTransform="rotate(45 50 50)">
-									<rect fill="#3335"></rect>
+									<rect fill="#3335" />
 									<line stroke="#fb85" stroke-width="60px" y2="30" />
 									<animateTransform attributeType="xml" attributeName="patternTransform"
 										type="translate" from="0" to="61" dur="5s" repeatCount="indefinite"
