fixed movement path on hex grids

--- a/web/index.html
+++ b/web/index.html
@@ -514,15 +514,12 @@
 							<pattern id="gridPatternHexH" width="2" height="1.154701" patternUnits="userSpaceOnUse">
 								<g>
 									<polygon
-										points="0.167,1.077 0.833,1.077 1.167,0.5 0.833,-0.077 0.167,-0.077 -0.167,0.5" />
-									<polygon
-										points="0.167,1.077 0.833,1.077 1.167,0.5 0.833,-0.077 0.167,-0.077 -0.167,0.5"
+										points="0.167,1.155 0.833,1.155 1.167,0.577 0.833,0 0.167,0 -0.167,0.577" />
+									<polygon points="0.167,1.155 0.833,1.155 1.167,0.577 0.833,0 0.167,0 -0.167,0.577"
 										transform="translate(0, 1.155)" />
-									<polygon
-										points="0.167,1.077 0.833,1.077 1.167,0.5 0.833,-0.077 0.167,-0.077 -0.167,0.5"
+									<polygon points="0.167,1.155 0.833,1.155 1.167,0.577 0.833,0 0.167,0 -0.167,0.577"
 										transform="translate(1, 0.577)" />
-									<polygon
-										points="0.167,1.077 0.833,1.077 1.167,0.5 0.833,-0.077 0.167,-0.077 -0.167,0.5"
+									<polygon points="0.167,1.155 0.833,1.155 1.167,0.577 0.833,0 0.167,0 -0.167,0.577"
 										transform="translate(1, -0.577)" />
 								</g>
 							</pattern>
