--- a/web/index.html
+++ b/web/index.html
@@ -487,7 +487,7 @@
 							</button>
 							<button id="movableRemove" class="icon elevate with-tooltip">
 								<i class="fas fa-trash"></i>
-								<span>Remove From Scene</span>
+								<span>Remove from Scene</span>
 							</button>
 						</div>
 					</div>
