--- a/web/index.html
+++ b/web/index.html
@@ -548,7 +548,7 @@
 					</div>
 					<svg id="distanceCanvas" class="fill-board grid-canvas"></svg>
 					<div id="grid">
-						<div id="movableGhost" class="movable">
+						<div id="movableGhost" class="movable no-animate-move">
 							<div class="img"></div>
 						</div>
 					</div>
