--- a/web/index.html
+++ b/web/index.html
@@ -589,7 +589,9 @@
 						</svg>
 					</div>
 
-					<svg id="measureCanvas" class="fill-board grid-canvas"></svg>
+					<svg id="measureCanvas" class="fill-board grid-canvas">
+						<g id="measuringRoot"></g>
+					</svg>
 					<svg class="fill-board" style="pointer-events: none;">
 						<rect id="selectionArea" x="-2000" y="-2000"></rect>
 					</svg>
