introduced hex grid sphere measuring

--- a/web/index.html
+++ b/web/index.html
@@ -590,7 +590,9 @@
 					</div>
 
 					<svg id="measureCanvas" class="fill-board grid-canvas">
-						<g id="measuringRoot"></g>
+						<defs>
+							<polygon id="tile"></polygon>
+						</defs>
 					</svg>
 					<svg class="fill-board" style="pointer-events: none;">
 						<rect id="selectionArea" x="-2000" y="-2000"></rect>
