introduced upright token arrow

--- a/web/index.html
+++ b/web/index.html
@@ -549,7 +549,13 @@
 					<svg id="distanceCanvas" class="fill-board grid-canvas"></svg>
 					<div id="grid">
 						<div id="movableGhost" class="movable no-animate-move">
-							<div class="img"></div>
+							<div class="img rotating"></div>
+						</div>
+						<div id="angleArrow" class="movable no-animate-move">
+							<!-- <i class="fas fa-chevron-up arrowEnd"></i> -->
+							<div class="rotating">
+								<i class="fas fa-chevron-up arrowEnd"></i>
+							</div>
 						</div>
 					</div>
 
